[gd_scene load_steps=16 format=3 uid="uid://bq8kpvcnt58vo"]

[ext_resource type="Script" uid="uid://clkyp6e5x7yv2" path="res://scripts/actors/flame_dude_rc.gd" id="1_svwkq"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_x5u4b"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_xk17h"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_svwkq"]
size = Vector2(32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_j1wfo"]
size = Vector2(32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fs413"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_x5u4b")
}, {
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_xk17h")
}, {
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_svwkq")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_j1wfo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_p6tyu"]
size = Vector2(16, 24)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_obieb"]
size = Vector2(16, 24)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_c2gae"]
size = Vector2(16, 24)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_b1owv"]
size = Vector2(16, 24)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_t23ro"]
size = Vector2(16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_j7s6y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_p6tyu")
}, {
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_obieb")
}, {
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_c2gae")
}, {
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_b1owv")
}, {
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_t23ro")
}],
"loop": true,
"name": &"burning",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yshlb"]
radius = 15.7549
height = 55.7776

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svwkq"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_c5qfh"]
properties/0/path = NodePath("..:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="FlameDudeRC" type="CharacterBody2D" groups=["flamedudes"]]
script = ExtResource("1_svwkq")

[node name="Face" type="AnimatedSprite2D" parent="."]
position = Vector2(1.13178, -0.0313759)
scale = Vector2(1.34787, 1.56348)
sprite_frames = SubResource("SpriteFrames_fs413")
animation = &"idle"
frame_progress = 0.698018
flip_h = true

[node name="BlinkTimer" type="Timer" parent="Face"]

[node name="RayCast2D" type="RayCast2D" parent="Face"]
target_position = Vector2(150, 0)

[node name="Flames" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.131779, -19.0314)
scale = Vector2(1.84882, 2.43815)
sprite_frames = SubResource("SpriteFrames_j7s6y")
animation = &"burning"
frame_progress = 0.900073

[node name="BurnZone" type="Area2D" parent="."]
position = Vector2(-0.0168349, -4.99997)

[node name="BurnCollision" type="CollisionShape2D" parent="BurnZone"]
position = Vector2(1.14861, -2.03141)
shape = SubResource("CapsuleShape2D_yshlb")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(1.13178, 4.96862)
shape = SubResource("RectangleShape2D_svwkq")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_c5qfh")

[node name="ChaseTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]

[node name="LeftBounds" type="Marker2D" parent="."]

[node name="RightBounds" type="Marker2D" parent="."]

[connection signal="body_entered" from="BurnZone" to="." method="_on_burn_zone_body_entered"]
